# EDP-eads

./: .gitignore  CMakeLists.txt  README.adoc  configure  test
eads/: .md_commun.hpp.swp  .md_heat.hpp.swp  .md_heat2.hpp.swp  .md_ns.hpp.swp  .md_ns2.hpp.swp  .projet_eads.cpp.swp  .projet_eads.hpp.swo  .projet_eads.hpp.swp  .projet_eads2.hpp.swp  <  CMakeLists.txt  CMakelists.txt  README.adoc  carre_fluid.cpp  chaleur.hpp  commun.hpp  fluide.hpp  md_commun.hpp  md_heat.hpp  md_heat2.hpp  md_ns.hpp  md_ns2.hpp  projet_eads.cpp  projet_eads.hpp  projet_eads2.hpp  qs_laplacian.cpp  testLaplacian.bash  test_fluid.cpp
eads/config_2d/: circle.geo  domain.geo  eads.cfg  kovasznay.cfg  pizza.geo  quickstart.cfg  test_fluid.cfg
eads/projet/projet2d/: .projet.cfg.swp  projet.cfg  projet.geo
eads/projet/projet2d/projet2d/: projet.cfg  projet.geo
eads/projet/projet3d/: projet.cfg  projet.geo
eads/quickstart/: md_heat.hpp  md_projet.cpp  md_projet.hpp  qs_2_projet.cpp  qs_adr.cpp  qs_laplacian.cpp  qs_projet.cpp  svg_md_projet.cpp  svg_md_projet.hpp  svg_projet_1.cpp
eads/quickstart/laplacian/circle/: circle  circle.cfg
eads/quickstart/projet/: list.bash
eads/quickstart/projet/projet2d/: projet.cfg  projet2.geo
